# image-exif-viewer

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/components/: AboutDialog.py  DetailsDialog.py  MainWindow.py  __init__.py
src/components/designer/: AboutDialog.ui  DetailsDialog.ui  MainWindow.ui  Ui_AboutDialog.py  Ui_DetailsDialog.py  Ui_MainWindow.py
src/model/: Image.py  ImageList.py  ImagesList.py  __init__.py
src/view/: Ui_AboutDialog.py  Ui_MainWindow.py
src/view/designer/: AboutDialog.ui  MainWindow.ui
