[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ImageViewer"
authors = [{ name = "Marco Di Rienzo" }]
version = "0.0.1"
requires-python = ">=3.8"
dependencies = ["pyqt5", "ExifRead"]

[project.optional-dependencies]
dev = ["autopep8"]

[tool.setuptools.packages.find]
where = ["src"]
